--- a/src/Subcomponent/attend/leave/leave.less
+++ b/src/Subcomponent/attend/leave/leave.less
@@ -26,3 +26,9 @@
     padding: 5px;
     color: #fff;
 }
+// .el-input>input{
+// width: 40%;
+// }
+// .el-textarea>textarea{
+//     width: 40%;
+// }
