--- a/src/Subcomponent/attend/leave/leave.less
+++ b/src/Subcomponent/attend/leave/leave.less
@@ -1,6 +1,7 @@
 .body {
     background: #fff;
 }
+
 .button {
     padding-top: 20px;
     padding-left: 20px;
@@ -8,24 +9,39 @@
     margin-bottom: 30px;
     border-bottom: 1px solid #f6f6f6;
     overflow: hidden;
-    .button-left{
+
+    .button-left {
         float: left;
         font-size: 20px;
     }
-    .button-right{
+
+    .button-right {
         float: right;
         padding-right: 20px;
-        .button-right-button{
+
+        .button-right-button {
             margin-left: 10px;
-            
+
         }
     }
 }
-.cell>i{
+
+.cell>i {
     font-size: 17px;
     padding: 5px;
     color: #fff;
 }
+
+.place {
+    .el-input {
+        width: 80%;
+    }
+
+    .el-textarea {
+        width: 80%;
+    }
+}
+
 // .el-input>input{
 // width: 40%;
 // }
